--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,12 @@
 .App {
   text-align: center;
 }
+/* body{
+  
+  font-family: 'Roboto Slab', serif;
 
+
+} */
 .App-logo {
   height: 40vmin;
   pointer-events: none;
